fixed image alignment

--- a/ui/src/Components/Design/sass/App.scss
+++ b/ui/src/Components/Design/sass/App.scss
@@ -12,15 +12,16 @@ body {
 
 body h1,
 .sub-heading {
-	margin-left: 3rem;
+	margin-left: 2.8rem;
 }
+
+.sub-heading {
+	margin-bottom: 2rem;
+}
+
 h1,
 h2 {
 	font-weight: vars.$font-weight-400;
-}
-
-h2 {
-	padding-bottom: 2rem;
 }
 
 p {
